--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -205,3 +204,5 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+test/
