--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 MONGO_URI=mongodb://localhost:27017/
+APPRAISAL_SYSTEM_MONGO_DB_NAME=faculty_appraisal_db
+DATA_INJECTION_COLLECTION_NAME=form_data_collection
+FACULTY_DATA_COLLECTION_NAME=faculty_data_collection
